--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 header {
-  background: linear-gradient(45deg, rgb(44, 32, 26) 30%, rgb(41, 39, 30) 90%);
+  background: linear-gradient(45deg, rgb(94, 93, 93) 30%, rgb(201, 175, 59) 90%);
   width: 100%;
-  height: 70px;
+  height: 120px;
   margin-bottom: 5px;
 }
 
@@ -9,5 +9,12 @@ h1 {
   font-size: 300%;
   text-shadow: 1px 1px 50px rgb(229, 235, 230);
   color: aliceblue;
-  margin-left: 35%;
+  margin-left: 40%;
+}
+
+h2 {
+  font-size: 180%;
+  text-shadow: 1px 1px 50px rgb(229, 235, 230);
+  color: rgb(17, 49, 19);
+  margin-left: 40%;
 }
