--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -3,7 +3,7 @@ html body {
   width: 100%;
   font-family: 'Poppins', sans-serif;
   color: #222;
-  background-color: beige;
+  background-color: bisque;
 }
 
 
