--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,20 +1,23 @@
 header {
-  background: linear-gradient(45deg, rgb(94, 93, 93) 30%, rgb(201, 175, 59) 90%);
+  background: linear-gradient(45deg, rgb(179, 164, 164) 30%, rgb(43, 125, 150) 90%);
   width: 100%;
   height: 120px;
-  margin-bottom: 5px;
+  margin-bottom: 2px;
+  border: 1px solid rgb(178, 184, 178);
+  box-shadow: 5px 10px 18px #a19f1df3;
 }
 
 h1 {
+  padding-top: 10px;
   font-size: 300%;
-  text-shadow: 1px 1px 50px rgb(229, 235, 230);
-  color: aliceblue;
+  text-shadow: 1px 1px 50px rgb(167, 167, 167);
+  color: rgb(13, 25, 36);
   margin-left: 40%;
 }
 
 h2 {
   font-size: 180%;
   text-shadow: 1px 1px 50px rgb(229, 235, 230);
-  color: rgb(17, 49, 19);
+  color: rgba(243, 23, 23, 0.925);
   margin-left: 40%;
 }
