--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,23 +1,24 @@
 header {
   background: linear-gradient(45deg, rgb(179, 164, 164) 30%, rgb(43, 125, 150) 90%);
   width: 100%;
-  height: 120px;
+  height: 110px;
   margin-bottom: 2px;
   border: 1px solid rgb(178, 184, 178);
   box-shadow: 5px 10px 18px #a19f1df3;
 }
 
 h1 {
-  padding-top: 10px;
-  font-size: 300%;
+  padding-top: 5px;
+  font-size: 320%;
+  font-weight: bold;
   text-shadow: 1px 1px 50px rgb(167, 167, 167);
-  color: rgb(13, 25, 36);
+  color: rgb(211, 66, 66);
   margin-left: 40%;
 }
 
 h2 {
-  font-size: 180%;
+  font-size: 150%;
   text-shadow: 1px 1px 50px rgb(229, 235, 230);
-  color: rgba(243, 23, 23, 0.925);
-  margin-left: 40%;
+  color: rgba(153, 50, 50, 0.925);
+  margin-left: 42%;
 }
