--- a/src/components/ImageRender/ImageRender.css
+++ b/src/components/ImageRender/ImageRender.css
@@ -9,4 +9,5 @@
   margin: 10px;
   border: 1px solid rgb(88, 184, 88);
   box-shadow: 5px 10px 18px #080808f3;
+  background-color: rgb(221, 226, 226);
 }
