--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,21 +1,7 @@
 html body {
   height: 100%;
   width: 100%;
-  font-family: 'Poppins', sans-serif;
-  color: #222;
+  font-family: "Times New Roman", Times, serif;
   background-color: bisque;
-}
-
-
-.cartoonImg {
-  height: 150px;
-  width: 150px;
-}
-
-.cartoonCard {
-  height: 150px;
-  width: 150px;
-  margin: 10px;
-  background-color: rgb(219, 219, 219);
 }
 
